test/sema/typeck/lambda/capture-self-value-type.dora
struct Point(Int32, Int32)

impl Point {
    fn test() {
        let f = || {
            self.0;
        };
    }
}
